New SVG component

--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -666,7 +666,7 @@ mark {
 			background-position:right 8px top 50%;
 			height: 100%;
 			min-height: 65px;
-			position: absolute;		
+			//position: absolute;		
 			}
 			.table_rows_list a.button_transcription:hover {
 				background-image: url('../../themes/default/icon_transcription_hover.svg');				
