--- a/lib/dedalo/common/css/library.less
+++ b/lib/dedalo/common/css/library.less
@@ -3,6 +3,8 @@
 ----------------------------------------- */
 // movil_max_width
 @movil_max_width : 768px;
+// tablet_max_width
+@tablet_max_width : 980px;
 // content_data_max_width
 @content_data_max_width : 1152px;
 
