--- a/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
+++ b/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
@@ -287,3 +287,43 @@ input.css_autocomplete_hi_dato_hidden {
 		color: #f5c39f !important;
 	}
 
+
+	// grid_images_container
+	.grid_images_container {
+		background-color: #ffffff;
+		display: table;
+		clear: both;
+		//margin: 10px;
+		top: 10px;
+		position: relative;
+		width: 100%;
+
+		img {
+			height: 70px;
+			width: 70px;//auto;
+			margin-right: 5px;
+			border: 1px solid #8e8e8e;
+			border-radius: 3px;
+			cursor: move;
+		}
+		img:active {
+			opacity: 0.4;
+		}
+
+	}
+
+
+
+/* AUTOCOMPLETE
+---------------------------------------- */
+	.css_wrap_autocomplete_hi .autocomplete_wrapper {
+		float: right;
+		position: relative;
+		//top: 22px;
+	}
+	.css_wrap_autocomplete_hi.wrap_autocomplete_hi_search .autocomplete_wrapper {
+		float: left;
+		margin-right: 5px;
+	}
+	
+
