--- a/lib/dedalo/component_check_box/html/component_check_box_search.phtml
+++ b/lib/dedalo/component_check_box/html/component_check_box_search.phtml
@@ -72,7 +72,18 @@
 
 			if(SHOW_DEBUG===true) {
 				$html_content .= "<span class=\"debug_info\">$search_input_name</span>";
-			}			
+			}
+
+
+			#
+			# JS Init component
+			$html_content .= '<script>';
+			# Init component
+			$init_options = new stdClass();
+				$init_options->component_name 	= $component_name;
+				$init_options->wrapper_id 		= $id_wrapper;
+			$html_content .= 'component_common.init('.json_encode($init_options).');';
+			$html_content .= '</script>';		
 			
 			break;							
 	}
