--- a/lib/dedalo/component_svg/html/component_svg_list.phtml
+++ b/lib/dedalo/component_svg/html/component_svg_list.phtml
@@ -11,7 +11,7 @@
 				break;
 		
 		case ($permissions>=1):
-				$html_content .= "<span class=\"css_span_dato\">$valor</span>";
+				$html_content .= '<img src="'.$file_url.'" />';
 				break;
 	}
 
