--- a/lib/dedalo/component_text_area/html/component_text_area_tool_indexation.phtml
+++ b/lib/dedalo/component_text_area/html/component_text_area_tool_indexation.phtml
@@ -12,7 +12,7 @@
 	print "data-lang=\"{$lang}\" ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-role=\"{$role}\" ";	
-	#print "data-dato=\"{$dato_raw}\" ";
+	print "data-component_info='{$component_info}' ";
 	print "data-component_name=\"{$component_name}\" ";
 	print ">";
 
