--- a/lib/dedalo/common/js/labels.phtml
+++ b/lib/dedalo/common/js/labels.phtml
@@ -28,7 +28,7 @@ $ar_label = label::get_ar_label();
 	#
 	# JSON OBJECT MODE
 	# js object formated like person={firstname:"John",lastname:"Doe",age:50,eyecolor:"blue"};
-	$js = 'get_label=new Object(' . json_handler::encode($ar_label,JSON_UNESCAPED_UNICODE) . ')';
+	$js = 'const get_label=new Object(' . json_handler::encode($ar_label,JSON_UNESCAPED_UNICODE) . ')';
 
 
 header("Content-type: text/javascript; charset=utf-8");
