--- a/lib/dedalo/component_filter_master/html/component_filter_master_edit.phtml
+++ b/lib/dedalo/component_filter_master/html/component_filter_master_edit.phtml
@@ -92,9 +92,15 @@
 				$html_content .= "</ul>";
 				
 	
-				if(SHOW_DEBUG) {
-					#$html_content .= "\n <span class=\"css_span_debugger\" id=\"debugger_{$tipo}\" >{$debugger}</span>";
-				}
+				#
+				# JS Init component
+				$html_content .= '<script>';
+				# Init component
+				$init_options = new stdClass();
+					$init_options->component_name 	= $component_name;
+					$init_options->wrapper_id 		= $id_wrapper;
+				$html_content .= 'component_common.init('.json_encode($init_options).');';
+				$html_content .= '</script>';
 				break;							
 	}
 
