--- a/lib/dedalo/component_html_text/html/component_html_text_edit.phtml
+++ b/lib/dedalo/component_html_text/html/component_html_text_edit.phtml
@@ -20,85 +20,88 @@
 	$html_label = component_common_draw::draw_label($this);
 	
 	# CONTENIDO (INPUT)
-	$html_contenido = '';
+	$html_content = '';
 	switch(true) {
 			
 		case $permissions===0	:
-					$html_contenido .= "";	
-					break;
+			$html_content .= "";	
+			break;
 						
-		case $permissions===1	: 	#$html_contenido .= "<div class=\"html_text_content html_text_content_shadow\" >";
-					$html_contenido .= "<span class=\"css_span_dato\">$dato</span>";
-					#$html_contenido .= "</div>"; #end html_text_content
+		case $permissions===1	: 	#$html_content .= "<div class=\"html_text_content html_text_content_shadow\" >";
+			$html_content .= "<span class=\"css_span_dato\">$dato</span>";
+			#$html_content .= "</div>"; #end html_text_content
 
-					##
-					# WRAP CURRENT SELECTED FRAGMENT (RELATION / ADD PORTAL BUTTON) 
-					#
-					$html_contenido .= "<div id=\"relations_ajax_div_{$tipo}\" class=\"wrap_fragment\" ";
-					$html_contenido .= "data-tipo=\"{$tipo}\" ";
-					$html_contenido .= "data-section_tipo=\"{$section_tipo}\" ";
-					$html_contenido .= "data-parent=\"{$parent}\" ";
-					$html_contenido .= "data-modo=\"selected_fragment\" ";
-					$html_contenido .= "data-lang=\"{$lang}\" ";
-					$html_contenido .= "data-context_name=\"$context_name\" ";
-					$html_contenido .= "data-caller_id=\"$caller_id\" ";
-					$html_contenido .= "data-component_name=\"$component_name\" ";
-					$html_contenido .= ">";
-					$html_contenido .= "<div class=\"content_data\"><!-- AJAX CONTENT HERE --></div>";
-					$html_contenido .= "</div>";
-					break;						
+			##
+			# WRAP CURRENT SELECTED FRAGMENT (RELATION / ADD PORTAL BUTTON) 
+			#
+			$html_content .= "<div id=\"relations_ajax_div_{$tipo}\" class=\"wrap_fragment\" ";
+			$html_content .= "data-tipo=\"{$tipo}\" ";
+			$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
+			$html_content .= "data-parent=\"{$parent}\" ";
+			$html_content .= "data-modo=\"selected_fragment\" ";
+			$html_content .= "data-lang=\"{$lang}\" ";
+			$html_content .= "data-context_name=\"$context_name\" ";
+			$html_content .= "data-caller_id=\"$caller_id\" ";
+			$html_content .= "data-component_name=\"$component_name\" ";
+			$html_content .= ">";
+			$html_content .= "<div class=\"content_data\"><!-- AJAX CONTENT HERE --></div>";
+			$html_content .= "</div>";
+			break;						
 		
 		case ($permissions>=2)	:
 
-					/*
-					# Dato reference default lang
-					if ($modo!='tool_lang' && !empty($default_component)) {
-						#$html_contenido .= " <div class=\"dato_refecence_default_lang\">$dato_reference_lang</div>";
-						# Fijamos el lenguaje actual como el de destino para el tool_lang
-						$html_contenido .= "<script>set_localStorage('last_target_lang','$lang')</script>";
-						$tool_lang = new tool_lang($default_component,'button');
-							#dump($tool_lang,'$tool_lang');
-						$html_contenido .= $tool_lang->get_html();
-					}
-					*/					
+			/*
+			# Dato reference default lang
+			if ($modo!='tool_lang' && !empty($default_component)) {
+				#$html_content .= " <div class=\"dato_refecence_default_lang\">$dato_reference_lang</div>";
+				# Fijamos el lenguaje actual como el de destino para el tool_lang
+				$html_content .= "<script>set_localStorage('last_target_lang','$lang')</script>";
+				$tool_lang = new tool_lang($default_component,'button');
+					#dump($tool_lang,'$tool_lang');
+				$html_content .= $tool_lang->get_html();
+			}
+			*/					
 
-					##
-					# Text area
-					#					
-					$html_contenido .= "<textarea class=\"css_html_text\" ";
-					$html_contenido .= "id=\"{$identificador_unico}\" ";
-					$html_contenido .= "name=\"{$input_name}\" ";
-					$html_contenido .= "data-tipo=\"{$tipo}\" ";
-					$html_contenido .= "data-lang=\"{$lang}\" ";
-					$html_contenido .= "data-section_tipo=\"{$section_tipo}\" ";
-					$html_contenido .= "data-parent=\"$parent\" ";
-					$html_contenido .= "data-context_name=\"$context_name\" ";
-					$html_contenido .= "title=\"$html_title\">";
-					$html_contenido .= $dato;
-					$html_contenido .= "</textarea>";
-
-	
-					# INIT : Init text editor					
-					$html_contenido .= "<script>";
-					$html_contenido .= "component_html_text.init({\"uid\":\"{$identificador_unico}\",\"modo\":\"{$modo}\",\"traducible\":\"{$traducible}\",\"propiedades_json\":$propiedades_json});";
-					$html_contenido .= "</script>";
+			##
+			# Text area
+			#					
+			$html_content .= "<textarea class=\"css_html_text\" ";
+			$html_content .= "id=\"{$identificador_unico}\" ";
+			$html_content .= "name=\"{$input_name}\" ";
+			$html_content .= "data-tipo=\"{$tipo}\" ";
+			$html_content .= "data-lang=\"{$lang}\" ";
+			$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
+			$html_content .= "data-parent=\"$parent\" ";
+			$html_content .= "data-context_name=\"$context_name\" ";
+			$html_content .= "data-role=\"input_field\" ";
+			$html_content .= "title=\"$html_title\">";
+			$html_content .= $dato;
+			$html_content .= "</textarea>";
 
 
-					if (SHOW_DEBUG) {
-						#$html_contenido .= "<span class=\"debug_info\"> $identificador_unico</span>";					
-						#$html_contenido .= " <span class=\"css_span_debugger\" id=\"debugger_{$tipo}\" >{$debugger}</span>";
-					}
-					break;
+			#
+			# JS Init component					
+			$html_content .= "<script>";
+			# Init component
+			$init_options = new stdClass();
+				$init_options->component_name 	= $component_name;
+				$init_options->propiedades_json = $propiedades_json;						
+				$init_options->traducible 		= $traducible;
+				$init_options->modo 			= $modo;
+				$init_options->uid 				= $identificador_unico;
+			$html_content .= "component_common.init(".json_encode($init_options).");";
+			$html_content .= "</script>";			
+			break;
 	}	
 	
 	
 	# Prepare content to show in page
-	tools::prepare_content($html_contenido);
+	tools::prepare_content($html_content);
 	
 	
 	# PRINT HTML
 	print $html_label;
-	print $html_contenido;
+	print $html_content;
 	
 	
 	print "</div>"; //wrap
