--- a/lib/dedalo/component_image/html/component_image_edit.phtml
+++ b/lib/dedalo/component_image/html/component_image_edit.phtml
@@ -30,11 +30,11 @@ $js_url = DEDALO_LIB_BASE_URL.'/component_image/js/component_image_read.js';
 		$html_label = component_common_draw::draw_label($this);
 		
 		# CONTENIDO (INPUT)
-		$html_contenido = '';
+		$html_content = '';
 		switch($permissions) {
 				
 			case 0 :
-				$html_contenido .= "";
+				$html_content .= "";
 				break;
 							
 			case ($permissions>=1) :
@@ -67,61 +67,79 @@ $js_url = DEDALO_LIB_BASE_URL.'/component_image/js/component_image_read.js';
 					$add_class = 'no_file';
 				}
 
-				$html_contenido .= "<div class=\"loading_image blink\">Loading image..</div>";
+				$html_content .= "<div class=\"loading_image blink\">Loading image..</div>";
 				
 				# CANVAS : IMAGE
-		$html_contenido .= "<div class=\"canvas_container\">";	
+		$html_content .= "<div class=\"canvas_container\">";	
 
 			#dump($img_width, ' img_width ++ '.to_string());
 			#dump($img_height, ' img_height ++ '.to_string());
 
-				#$html_contenido .= "<canvas id=\"$identificador_unico\" class=\"canvas_edit $add_class\" resize hidpi=\"on\" {$open_tool_default}>";
-				$html_contenido .= "<canvas id=\"$identificador_unico\" class=\"canvas_edit $add_class\" hidpi=\"on\" {$open_tool_default}>";
-				#$html_contenido .= $image_thumb_html ; # Rendered in thumb mode
+				#$html_content .= "<canvas id=\"$identificador_unico\" class=\"canvas_edit $add_class\" resize hidpi=\"on\" {$open_tool_default}>";
+				$html_content .= "<canvas id=\"$identificador_unico\" class=\"canvas_edit $add_class\" hidpi=\"on\" {$open_tool_default}>";
+				#$html_content .= $image_thumb_html ; # Rendered in thumb mode
 				/*
-				$html_contenido .= "<img class=\"css_image\" ";
-				$html_contenido .= "src=\"$image_url\" ";
-				$html_contenido .= "id=\"img_$identificador_unico\" ";
-				$html_contenido .= "data-image_id=\"$image_id\" ";
-				$html_contenido .= "data-tipo=\"$tipo\" ";
-				$html_contenido .= "data-section_tipo=\"{$section_tipo}\" ";
-				$html_contenido .= "data-parent=\"$parent\" ";
-				$html_contenido .= "data-lang=\"$lang\" ";
+				$html_content .= "<img class=\"css_image\" ";
+				$html_content .= "src=\"$image_url\" ";
+				$html_content .= "id=\"img_$identificador_unico\" ";
+				$html_content .= "data-image_id=\"$image_id\" ";
+				$html_content .= "data-tipo=\"$tipo\" ";
+				$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
+				$html_content .= "data-parent=\"$parent\" ";
+				$html_content .= "data-lang=\"$lang\" ";
 				#if(empty($img_width)) $img_width = 539;
-				$html_contenido .= "data-img_width=\"$img_width\" ";
+				$html_content .= "data-img_width=\"$img_width\" ";
 				#if(empty($img_height)) $img_height = 404;
-				$html_contenido .= "data-img_height=\"$img_height\" ";
-				$html_contenido .= "alt=\"$image_id\" ";
-				$html_contenido .= "/>";
+				$html_content .= "data-img_height=\"$img_height\" ";
+				$html_content .= "alt=\"$image_id\" ";
+				$html_content .= "/>";
 				*/
-				$html_contenido .= "</canvas>";				
+				$html_content .= "</canvas>";				
 
 
-		$html_contenido .= "</div>";		
+		$html_content .= "</div>";		
 
-				#$html_contenido .= "<a href=\"$image_url\" target=\"_blank\" > + ";
-				#$html_contenido .= "</a>";
+				#$html_content .= "<a href=\"$image_url\" target=\"_blank\" > + ";
+				#$html_content .= "</a>";
 											
 		}
 
-		# INIT : Init canvas in read only mode 
+		#
+		# JS Init component
+		# INIT : Init canvas in read only mode
+		/*
 		$init_options = [
 			"canvas_id"  		  => $identificador_unico,
 			"id_wrapper" 		  => $id_wrapper,
 			"image_url"  		  => $image_url,
 			"original_img_height" => $original_img_height
 		];
-		$html_contenido .= "<script>";
-		$html_contenido .= "component_image_read.init(".json_encode($init_options).");";
-		$html_contenido .= "</script>";
+		$html_content .= "<script>";
+		$html_content .= "component_image_read.init(".json_encode($init_options).");";
+		$html_content .= "</script>";
+		*/
+
+		#
+		# JS Init component
+		$html_content .= '<script>';
+		# Init component
+		$init_options = new stdClass();
+			$init_options->component_name 		= $component_name;
+			$init_options->wrapper_id 			= $id_wrapper;
+			$init_options->canvas_id 			= $identificador_unico;
+			$init_options->image_url 			= $image_url;
+			$init_options->original_img_height 	= $original_img_height;
+			$init_options->init_mode 			= 'read';
+		$html_content .= 'component_common.init('.json_encode($init_options).');';
+		$html_content .= '</script>';
 
 		# Prepare content to show in page
-		tools::prepare_content($html_contenido);
+		tools::prepare_content($html_content);
 		
 
 		# PRINT HTML
 		print $html_label;
-		print $html_contenido;
+		print $html_content;
 	
 	
 	print "</div>"; //wrap
