--- a/lib/dedalo/component_text_area/html/component_text_area_edit.phtml
+++ b/lib/dedalo/component_text_area/html/component_text_area_edit.phtml
@@ -6,7 +6,7 @@
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'in', $modo, $lang);
 	
-	print "\n<div class=\"wrap_component css_wrap_text_area wrap_component_{$tipo}\" id=\"{$id_wrapper}\" ";
+	print "\n<div class=\"wrap_component css_wrap_text_area wrap_component_{$tipo} $wrap_css_selectors\" id=\"{$id_wrapper}\" ";
 	print "data-tipo=\"{$tipo}\" ";
 	print "data-section_tipo=\"{$section_tipo}\" ";
 	print "data-parent=\"{$parent}\" ";
@@ -185,7 +185,7 @@
 						$html_content .= "data-portal_tipo=\"$portal_tipo\" ";
 						$html_content .= "data-portal_parent=\"$portal_parent\" ";
 						$html_content .= "data-portal_section_tipo=\"$portal_section_tipo\" ";
-						$html_content .= "data-rel_locator=\"\"		 ";			
+						$html_content .= "data-rel_locator=\"\"	";
 						$html_content .= ">";
 						$html_content .= label::get_label('relacionar_fragmento_seleccionado') . " (".label::get_label('etiqueta')."<span></span>)";
 						if(SHOW_DEBUG===true) {
@@ -196,15 +196,19 @@
 					}
 
 
-				# INIT : Init text editor	
-				$html_content .= "<script>";
-				#$html_content .= "var init=new component_text_area.init({uid:'$identificador_unico',modo:'$modo',propiedades:'$propiedades_json'});";
-				//$html_content .= "a.init({uid:'$identificador_unico',modo:'$modo',propiedades:'$propiedades_json'});";
-				#$html_content .= "console.log(init.inited);";
-				#$html_content .= "Object.create(component_text_area).init({uid:'$identificador_unico',modo:'$modo',propiedades:'$propiedades_json'});";
-				$html_content .= "component_text_area.init({uid:'$identificador_unico',modo:'$modo',propiedades:'$propiedades_json'});";
-				#$html_content .= "console.log(a);";
-				$html_content .= "</script>";
+
+				#
+				# JS Init component	
+				$html_content .= '<script>';
+				$init_options = new stdClass();
+					$init_options->component_name 	= $component_name;
+					$init_options->id_wrapper 		= $id_wrapper;
+					$init_options->uid 				= $identificador_unico;
+					$init_options->modo 			= $modo;
+					$init_options->permissions 		= $permissions;
+					$init_options->propiedades 		= $propiedades;
+				$html_content .= 'component_common.init('.json_encode($init_options).');';
+				$html_content .= '</script>';
 				
 
 				if(SHOW_DEBUG===true) {
