--- a/lib/dedalo/ts_object/css/ts_object.less
+++ b/lib/dedalo/ts_object/css/ts_object.less
@@ -333,7 +333,15 @@
 				color: #fff !important;
 			}
 
-		    
+	
+		/* TS_OBJECT_CHILDRENS_ARROW_ICON
+		---------------------------------------- */	    
+		.term_img{
+			padding: 0px !important;
+		}
+		.term_img > img{
+			height: 22px;
+		}
 
 
 
@@ -462,7 +470,7 @@
 		.inline_common ;
 		width: 100%;
 		height: 0;
-		margin-left: 30px-3;
+		margin-left: 50px;
 		//background-color: #81F4F0;
 		//min-height: 20px;
 		display: none;
@@ -481,6 +489,9 @@
 			content: "[ND] "
 		}
 
+	.wrap_ts_object_nd > .id_column_content > .ts_object_edit {
+		margin-left: 17px;
+	}
 
 
 
